graphql-parser/tests/snapshots/queries__query_object_argument_win.snap
---
source: graphql-parser/tests/queries.rs
expression: result_win
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: None,
                        variable_definitions: [],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:7),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "node",
                                        arguments: [
                                            (
                                                "id",
                                                Int(
                                                    Number(
                                                        1,
                                                    ),
                                                ),
                                            ),
                                            (
                                                "obj",
                                                Object(
                                                    {
                                                        "key1": Int(
                                                            Number(
                                                                123,
                                                            ),
                                                        ),
                                                        "key2": Int(
                                                            Number(
                                                                456,
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
